fix: remove _fake_external_image_proxy_endpoint parameter
