# src/pages/api/images/view.ts
@@ -10,45 +10,46 @@ export default withRouteSpec({
   methods: ["GET"],
   queryParams: z.object({
     image_id: z.string().uuid(),
-    _fake_external_image_proxy_endpoint: z.string().url().optional(),
   }),
 } as const)(async (req, res) => {
-  const { image_id, _fake_external_image_proxy_endpoint } = req.query
-  if (_fake_external_image_proxy_endpoint) {
-    const { status, headers, data } = await axios.get(
-      _fake_external_image_proxy_endpoint,
-      {
-        params: {
-          image_id,
-        },
-        responseType: "arraybuffer",
-        validateStatus: () => true,
-      },
-    )
+  const { image_id } = req.query
 
-    res.status(status)
-
-    if (headers["cache-control"]) {
-      res.setHeader("cache-control", headers["cache-control"] as string)
-    }
-
-    if (headers["content-type"]) {
-      res.setHeader("content-type", headers["content-type"] as string)
-    }
-
-    res.end(data)
+  if (image_id === "00000000-0000-0000-0000-000000000000") {
+    res.setHeader("content-type", "image/png")
+    res.setHeader("cache-control", "public, max-age=31536000, immutable")
+    res.status(200).end(seam_logo.data)
 
     return
   }
 
-  if (req.query.image_id !== "00000000-0000-0000-0000-000000000000") {
+  const { external_image_proxy_endpoint } = req.db
+  if (!external_image_proxy_endpoint) {
     throw new NotFoundException({
       type: "image_not_found",
       message: "Image not found",
     })
   }
 
-  res.setHeader("content-type", "image/png")
-  res.setHeader("cache-control", "public, max-age=31536000, immutable")
-  res.status(200).end(seam_logo.data)
+  const { status, headers, data } = await axios.get(
+    external_image_proxy_endpoint,
+    {
+      params: {
+        image_id,
+      },
+      responseType: "arraybuffer",
+      validateStatus: () => true,
+    },
+  )
+
+  res.status(status)
+
+  if (headers["cache-control"]) {
+    res.setHeader("cache-control", headers["cache-control"] as string)
+  }
+
+  if (headers["content-type"]) {
+    res.setHeader("content-type", headers["content-type"] as string)
+  }
+
+  res.end(data)
 })
